fix(nc-gui): number list visibility issue in normal html render mode

--- a/packages/nc-gui/assets/style.scss
+++ b/packages/nc-gui/assets/style.scss
@@ -1167,7 +1167,7 @@ svg.nc-virtual-cell-icon {
   }
 
   ol {
-    @apply -ml-6 !pl-4;
+    @apply !pl-4;
     li {
       list-style-type: decimal;
     }
